<resources>
    <string name="app_name">Hunger Hunterz</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_btn_find">Find</string>

    <string-array name="place_type">
        <item>restaurant</item>

    </string-array>

    <string-array name="place_type_name">
        <item>Restaurant</item>


    </string-array>
    <string name="title_activity_place_details">PlaceDetailsActivity</string>


    <!--For signing -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="desc_google_icon">Google Logo</string>
    <string name="title_text">Google\n Authentication</string>

    <!--For Add Restaurant. -->


    <string name="Add_New">Add New</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete Contact</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="street">Street</string>
    <string name="country">City/Zip</string>
    <string name="save">Save Restaurant</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Register</string>


</resources>
