<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/bg4"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="70dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center_horizontal" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:src="@drawable/logohunger"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="Email"
            android:textColor="@color/fbutton_color_alizarin"
            android:layout_marginTop="50dp" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/fbutton_color_alizarin"
            android:singleLine="true"
            android:layout_marginTop="10dp" />

        <Button
            android:layout_marginTop="50dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingBottom="10dp"
            android:paddingLeft="40dp"
            android:background="@drawable/buttonstyle"
            android:text="@string/action_sign_in_short"
            android:paddingRight="40dp"
            android:paddingTop="10dp"
            android:layout_gravity="center_horizontal"/>


        <Button
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/action_register"
            android:paddingBottom="8dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="8dp"
            android:background="@drawable/buttonstyle"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</ScrollView>
