<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.anorakstech.sanjeev.restauranttrace.DispalyaDetailofRestaurant">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:id="@+id/layoutofimage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/image_view"
                    android:layout_height="250dp"
                    android:src="@drawable/add_image"
                    android:layout_width="fill_parent"/>

        </RelativeLayout>



        <TableLayout
            android:layout_below="@+id/layoutofimage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <TableRow>
                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:clickable="false"
                    android:capitalize="words"
                    android:ellipsize="middle"
                    android:hint="Restaurant Name">
                </EditText>
                <requestFocus />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/black"
                    android:inputType="textEmailAddress"
                    android:capitalize="words"
                    android:ellipsize="end"
                    android:hint="www.xyz@abc.com"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/black"
                    android:hint="9797979797"
                    android:inputType="phone|text"
                    android:capitalize="words" />

            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/editTextEmail"
                    android:layout_alignLeft="@+id/textView5"
                    android:text="@string/street"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/editTextStreet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/editTextName"
                    android:layout_below="@+id/editTextPhone"
                    android:ems="10"
                    android:textColor="@color/black"
                    android:hint="DownTown"
                    android:inputType="text"
                    android:capitalize="words" />

            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/editTextCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/black"
                    android:hint="180000"
                    android:inputType="number|text"
                    android:capitalize="words" />
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cuisine"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/editTextCuisine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/black"
                    android:hint="momos"
                    android:inputType="text"
                    android:capitalize="words" />
            </TableRow>

            <TableRow
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp">
                <Button
                    android:id="@+id/savedata_btn"
                    android:layout_gravity="center"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:background="@color/colorAccent"
                    android:alpha=".9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:elevation="8dp" />
            </TableRow>

        </TableLayout>

    </RelativeLayout>

</ScrollView>
